<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.administrador.curso3_tarea4.AcercadeActivity"
    tools:showIn="@layout/activity_acercade">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTituloAcercade"
                android:text="@string/titulo_acercade"
                android:layout_width="80dp"
                android:layout_height="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                 />

            <ImageView
                android:id="@+id/imgAcercade"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/mi_mascota"
                app:srcCompat="@drawable/my_pic" />


            <TextView
                android:id="@+id/tvAcercadeNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_acercade_nombre"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                 />

            <TextView
                android:id="@+id/tvAcercadeEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_acercade_edad"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                 />

            <TextView
                android:id="@+id/tvAcercadeEstudios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/tv_acercade_estudios"
                />

            <TextView
                android:id="@+id/tvAcercadeExperiencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_acercade_experiencia_laboral"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                 />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
