<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvMascota"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:elevation="2dp"
    card_view.cardConerRadius="4dp">


    <LinearLayout
        android:id="@+id/llCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fondo_perro01"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/descipcion_perro"
            android:src="@drawable/perro00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_barra_cardview"
            android:background="#ffff"
            android:gravity="center"
            android:orientation="horizontal">


            <android.support.constraint.ConstraintLayout
                android:id="@+id/layoutBarra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageButton
                    android:id="@+id/btnLike"
                    android:layout_width="@dimen/width_hueso"
                    android:layout_height="@dimen/height_hueso"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription=""
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/hueso_like"
                    tools:ignore="ContentDescription,RtlHardcoded" />

                <TextView
                    android:id="@+id/tvNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/nombre"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintLeft_toRightOf="@+id/btnLike"
                    app:layout_constraintRight_toLeftOf="@+id/tvNumLikes"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.77" />

                <TextView
                    android:id="@+id/tvNumLikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/num_likes"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/imgHuesoAmarillo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="RtlHardcoded" />

                <ImageView
                    android:id="@+id/imgHuesoAmarillo"
                    android:layout_width="@dimen/width_hueso"
                    android:layout_height="@dimen/height_hueso"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/hueso_amarillo"
                    tools:ignore="ContentDescription,RtlHardcoded" />



            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>